# BBtracker

./: app.py  main.py  models.py  scheduler.py
NvidiaTracker/: database.py  pyproject.toml  replit.nix  scraper.py  temp_response.html
NvidiaTracker/static/js/: chart.js  main.js
NvidiaTracker/templates/: history.html  index.html
static/css/: styles.css
templates/: layout.html
